--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Components</title>
-    <link rel="stylesheet" href="https://unpkg.com/docute@4/dist/docute.css">
+    <link rel="stylesheet" href="css/docute.css">
   </head>
   <body>
     <div id="docute"></div>
-    <script src="https://unpkg.com/docute@4/dist/docute.js"></script>
+    <script src="js/docute.js"></script>
     <script>
       new Docute({
         target: '#docute',
